syntax = "proto3";

package duality.v1;

option go_package = "github.com/louisbranch/duality-engine/api/gen/go/duality/v1;dualityv1";

enum Outcome {
  OUTCOME_UNSPECIFIED = 0;

  // No difficulty provided: just classify the roll by the higher die (or crit).
  ROLL_WITH_HOPE = 1;
  ROLL_WITH_FEAR = 2;

  // Difficulty provided: success/failure flavored by higher die (or crit).
  SUCCESS_WITH_HOPE = 3;
  SUCCESS_WITH_FEAR = 4;
  FAILURE_WITH_HOPE = 5;
  FAILURE_WITH_FEAR = 6;

  // Matching duality dice.
  CRITICAL_SUCCESS = 7;
}
